force-app/main/default/objects/Opportunity_Salesforce_Contact__c/Opportunity_Salesforce_Contact__c.object-meta.xml
<CustomObject>
    <description>Salesforce team attached to this opportunity. This object is to circumvent rolling up all of the activities from the standard Opportunity Contact object</description>
    <label>Salesforce Contact</label>
    <nameField>
        <label>Opportunity Salesforce Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>