force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunity__c</fullName>
    <formula>Opportunity__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Opportunity</label>
    <type>Checkbox</type>
</CustomField>