force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/DisplayNameTitle__c.field-meta.xml
<CustomField>
    <fullName>DisplayNameTitle__c</fullName>
    <formula>Salesforce_Contact__r.FirstName + &apos; &apos; + Salesforce_Contact__r.LastName + &apos; - &apos; +  Salesforce_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayNameTitle</label>
    <type>Text</type>
</CustomField>