force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Is_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opportunity Closed?</label>
    <type>Checkbox</type>
</CustomField>