force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/isAutomationOpportunity__c.field-meta.xml
<CustomField>
    <fullName>isAutomationOpportunity__c</fullName>
    <formula>Opportunity__r.isAutomationOpportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAutomationOpportunity</label>
    <type>Checkbox</type>
</CustomField>