force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/isLeadContact__c.field-meta.xml
<CustomField>
    <fullName>isLeadContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLeadContact</label>
    <type>Checkbox</type>
</CustomField>