force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Mulesoft_ACV__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_ACV__c</fullName>
    <label>Mulesoft ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>