force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Salesforce Contacts</relationshipLabel>
    <relationshipName>Opportunity_Salesforce_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>