force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Opportunity_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Alias__c</fullName>
    <formula>Opportunity__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Alias</label>
    <type>Text</type>
</CustomField>