force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Opportunity_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Name__c</fullName>
    <label>Opportunity Stage Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>