force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Salesforce_ACV__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ACV__c</fullName>
    <label>Salesforce ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>