force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Salesforce_Contact__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Contact__c</fullName>
    <label>Salesforce Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salesforce Contacts</relationshipLabel>
    <relationshipName>Opportunity_Salesforce_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>