force-app/main/default/objects/Opportunity_Salesforce_Contact__c/fields/Within_Last_Six_Months__c.field-meta.xml
<CustomField>
    <fullName>Within_Last_Six_Months__c</fullName>
    <formula>IF(DATEVALUE( Opportunity__r.LastModifiedDate ) &gt;= TODAY() - 180, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Within Last Six Months</label>
    <type>Checkbox</type>
</CustomField>